--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </p>
     </div>
 
-    <div onload="start_slide_show()">
+    <div>
       <p>Recent pictures</p>
       <img class="slide_show" id="slide_show" src="./js/slide_show_pics/pic1.jpg">
     </div>
