--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div>
       <p>Recent pictures</p>
-      <img class="slide_show" id="slide_show" src="./js/slide_show_pics/pic1.jpg">
+      <img class="slide_show" id="slide_show" src="./pictures/5133.jpg">
     </div>
   </body>
 
