--- a/columns/about_site.html
+++ b/columns/about_site.html
@@ -8,22 +8,23 @@
   <body class="column1">
     <h1>About this site</h1>
     <p>このサイトは自分の学習、趣味を兼ねて作成しているものになります。<br>
-        サイト自体はオンラインストレージサービス"Dropbox"と無料ホスティングサービス"Kissr.com"のみで出来ています。<br>
-        サイトの目的は学習内容の備忘録と趣味の情報発信を目的としており、知人にのみ公開しています。<br>
-        基本的には他者からのファイル書き換えなどは不可能だと思うのですが、念のため限定公開にしてます。<br>
+        このサイトは"Github pages"のみで出来ています。<br>
+        サイトの目的は学習内容の備忘録と趣味の情報発信を目的としております。<br>
+        以前作成したサイトはオンラインストレージサービス"Dropbox"と無料ホスティングサービス”Kissr”というサービスで作成してました。<br>
         ただ、サークルやクラスなどでの情報交換程度であれば十分だと思います。<br>
         今後もちょくちょく更新していければと思っているので、良いアイデアなどありましたらDMで教えていただけると嬉しいです。<br>
     </p>
 
     <p>今後はこのサイトのなかで色々なツールを試す場にもしていく予定です。<br>
-        現在の予定ではSCSSやLaravelを導入してみたいです。
+        現在の予定ではSCSSやナビゲーションバーを導入してみたいです。
     </p>
 
     <p>参考記事</p>
     <ul>
         <li><a href="https://ferret-plus.com/9755">Dropboxでホームページのホスティングをする方法</a></li>
+        <li><a href="https://techacademy.jp/magazine/6445"></a>無料で使える！GitHub Pagesを使ってWebページを公開する方法</li>
     </ul>
-    <a href="http://yayuhtmltest.kissr.com/">Back to top page</a>
+    <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
 
   </body>
 
