--- a/columns/discussion_list.html
+++ b/columns/discussion_list.html
@@ -31,7 +31,7 @@
     </tr>
   </table>
 
-  <a href="http://yayuhtmltest.kissr.com/">Back to top page</a>
+  <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
 
   </body>
 
