--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div>
       <p>Recent pictures</p>
-      <img alt="recent_picture1" src="./pictures/5133.jpg">
+      <img class="recent_picture1" src="./pictures/5133.jpg">
     </div>
   </body>
 
