--- a/column_archive.html
+++ b/column_archive.html
@@ -29,7 +29,7 @@
 
   </table>
 
-  <a href="http://yayuhtmltest.kissr.com/">Back to top page</a>
+  <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
   </body>
 
 </html>
