--- a/columns/about_site.html
+++ b/columns/about_site.html
@@ -22,7 +22,7 @@
     <p>参考記事</p>
     <ul>
         <li><a href="https://ferret-plus.com/9755">Dropboxでホームページのホスティングをする方法</a></li>
-        <li><a href="https://techacademy.jp/magazine/6445"></a>無料で使える！GitHub Pagesを使ってWebページを公開する方法</li>
+        <li><a href="https://techacademy.jp/magazine/6445">無料で使える！GitHub Pagesを使ってWebページを公開する方法</a></li>
     </ul>
     <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
 
