--- a/column_archive.html
+++ b/column_archive.html
@@ -26,6 +26,12 @@
       <td>ESS</td>
       <td><a href="./columns/discussion_list.html">discussion_list</a></td>
     </tr>
+    <tr>
+      <td>最近見ている情報源</td>
+      <td>2020/04/30</td>
+      <td>Service,Study</td>
+      <td><a href="./columns/column20200430.html">recommend_service</a></td>
+    </tr>
 
   </table>
 
