--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     <div>
       <p>Recent Update<br>
-        04/17 記事を追加しました。
+        04/17 記事を追加しました。<br>
+        04/30 記事を追加しました。
       </p>
     </div>
 
