modify latest column

--- a/columns/column20200430.html
+++ b/columns/column20200430.html
@@ -7,6 +7,9 @@
   </head>
   <body class="column1">
     <h1>最近見ている情報源</h1>
+    <div>
+        <img class="newspicks_img" src="../pictures/newspicks.jpg">
+    </div>
     <p>緊急事態宣言が出てからある意味での自由時間が増えて、みんないろんな時間の使い方をしていると思います。<br>
         最近私が見始めたサービスがありまして、それは"NewsPicks"です。<br>
         始めたきっかけは以前から関心があったことと、複数の友人から勧められたことでした。<br>
@@ -18,6 +21,11 @@
     <p>将来的にはこのページにコメントをつけられるようにして、みんなのおすすめのサービスなども共有していきたいです。<br>
         閲覧いただいてありがとうございました！
     </p>
+
+    <p>参考記事</p>
+    <ul>
+        <li><a href="https://newspicks.com/">NewsPicks.com</a></li>
+    </ul>
 
     <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
   </body>
