change img name

--- a/columns/column20200430.html
+++ b/columns/column20200430.html
@@ -8,7 +8,7 @@
   <body class="column1">
     <h1>最近見ている情報源</h1>
     <div>
-        <img class="newspicks_img" src="../pictures/newspicks.jpg">
+        <img class="newspicks_img" src="../pictures/newspicks_img.jpg">
     </div>
     <p>緊急事態宣言が出てからある意味での自由時間が増えて、みんないろんな時間の使い方をしていると思います。<br>
         最近私が見始めたサービスがありまして、それは"NewsPicks"です。<br>
