--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./css/index.css">
     <script type="text/javascript" src="./js/index.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165267394-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-165267394-1');
+</script>
+
     <title>Top Page</title>
   </head>
   <body>
