--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <title>Top Page</title>
   </head>
   <body>
+
+    <nav id="global_navi">
+      <ul>
+        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
+        <li><a href="./column_archive.html">コラム</a></li>
+        <li><a href="">ブック</a></li>
+      </ul>
+    </nav>
     <h1>Top Page</h1>
     <h2>Welcome to this site!</h2>
 
@@ -28,14 +36,10 @@
       </p>
     </div>
 
-    <div class="archive_link">
-      <a href="./column_archive.html">コラム一覧</a>
-    </div>
-
     <div>
       <p>Recent Update<br>
-        04/17 記事を追加しました。<br>
-        04/30 記事を追加しました。
+        04/30 記事を追加しました。<br>
+        06/05 ナビゲーションバーを設置しました。
       </p>
     </div>
 
