--- a/columns/discussion_list.html
+++ b/columns/discussion_list.html
@@ -6,6 +6,15 @@
     <title>他大ディス一覧</title>
   </head>
   <body class="column1">
+
+    <nav id="global_navi">
+      <ul>
+        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
+        <li><a href="./column_archive.html">コラム</a></li>
+        <li><a href="">ブック</a></li>
+      </ul>
+    </nav>
+    
     <h1>2019年度他大ディス募集一覧</h1>
     <p>自分が役職の間に実現できなかったアイデアです。<br>
       LINEだけだと情報がごちゃごちゃしちゃうからこういうまとめサイトがあればよかったと思って今更ですが作ってみました。<br>
