--- a/columns/about_site.html
+++ b/columns/about_site.html
@@ -6,6 +6,15 @@
     <title>サイトについて</title>
   </head>
   <body class="column1">
+
+    <nav id="global_navi">
+      <ul>
+        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
+        <li><a href="./column_archive.html">コラム</a></li>
+        <li><a href="">ブック</a></li>
+      </ul>
+    </nav>
+    
     <h1>About this site</h1>
     <p>このサイトは自分の学習、趣味を兼ねて作成しているものになります。<br>
         このサイトは"Github pages"のみで出来ています。<br>
