--- a/columns/column20200430.html
+++ b/columns/column20200430.html
@@ -6,6 +6,15 @@
     <title>最近見ている情報源</title>
   </head>
   <body class="column1">
+
+    <nav id="global_navi">
+      <ul>
+        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
+        <li><a href="./column_archive.html">コラム</a></li>
+        <li><a href="">ブック</a></li>
+      </ul>
+    </nav>
+    
     <h1>最近見ている情報源</h1>
     <div>
         <img class="newspicks_img" src="../pictures/newspicks_img.jpg">
