--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
         <li><a href="./column_archive.html">コラム</a></li>
-        <li><a href="">ブック</a></li>
+        <li><a href="./books_archive.html">ブック</a></li>
       </ul>
     </nav>
     <h1>Top Page</h1>
