--- a/columns/about_site.html
+++ b/columns/about_site.html
@@ -10,8 +10,8 @@
     <nav id="global_navi">
       <ul>
         <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
-        <li><a href="./column_archive.html">コラム</a></li>
-        <li><a href="">ブック</a></li>
+        <li><a href="../column_archive.html">コラム</a></li>
+        <li><a href="../books_archive">ブック</a></li>
       </ul>
     </nav>
     
