--- a/index.html
+++ b/index.html
@@ -25,15 +25,7 @@
     });
       </script>
     </div>
-    
 
-    <nav id="global_navi">
-      <ul>
-        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
-        <li><a href="./column_archive.html">コラム</a></li>
-        <li><a href="./books_archive.html">ブック</a></li>
-      </ul>
-    </nav>
     <h1>Top Page</h1>
     <h2>Welcome to this site!</h2>
 
@@ -48,7 +40,7 @@
     <div>
       <p>Recent Update<br>
         04/30 記事を追加しました。<br>
-        06/05 ナビゲーションバーを設置しました。
+        06/05 ナビゲーションバーを設置しました。週末までページ改修のため不具合が生じる可能性があります。
       </p>
     </div>
 
@@ -56,8 +48,6 @@
       <p>Recent pictures</p>
       <img class="recent_picture1" src="./pictures/5133.jpg">
     </div>
-    
-    <!---<script type="text/javascript" src="./js/index.js"></script> --->
   </body>
 
 </html>
