--- a/columns/about_site.html
+++ b/columns/about_site.html
@@ -2,19 +2,21 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/sub.css">
+    <link rel="stylesheet" href="../css/column.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>サイトについて</title>
   </head>
   <body class="column1">
 
-    <nav id="global_navi">
-      <ul>
-        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
-        <li><a href="../column_archive.html">コラム</a></li>
-        <li><a href="../books_archive">ブック</a></li>
-      </ul>
-    </nav>
-    
+    <div id="header">
+      <script>
+        $(function(){
+    $("#header").load("../header.html");
+    });
+      </script>
+    </div>
+
+
     <h1>About this site</h1>
     <p>このサイトは自分の学習、趣味を兼ねて作成しているものになります。<br>
         このサイトは"Github pages"のみで出来ています。<br>
