--- a/columns/column20200430.html
+++ b/columns/column20200430.html
@@ -2,19 +2,20 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/sub.css">
+    <link rel="stylesheet" href="../css/column.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>最近見ている情報源</title>
   </head>
   <body class="column1">
 
-    <nav id="global_navi">
-      <ul>
-        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
-        <li><a href="../column_archive.html">コラム</a></li>
-        <li><a href="../books_archive">ブック</a></li>
-      </ul>
-    </nav>
-    
+    <div id="header">
+      <script>
+        $(function(){
+    $("#header").load("../header.html");
+    });
+      </script>
+    </div>
+
     <h1>最近見ている情報源</h1>
     <div>
         <img class="newspicks_img" src="../pictures/newspicks_img.jpg">
