--- a/columns/discussion_list.html
+++ b/columns/discussion_list.html
@@ -2,19 +2,20 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/sub.css">
+    <link rel="stylesheet" href="../css/column.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>他大ディス一覧</title>
   </head>
   <body class="column1">
 
-    <nav id="global_navi">
-      <ul>
-        <li><a href="https://yanagisawayuki22.github.io/">トップページ</a></li>
-        <li><a href="../column_archive.html">コラム</a></li>
-        <li><a href="../books_archive">ブック</a></li>
-      </ul>
-    </nav>
-    
+    <div id="header">
+      <script>
+        $(function(){
+    $("#header").load("../header.html");
+    });
+      </script>
+    </div>
+
     <h1>2019年度他大ディス募集一覧</h1>
     <p>自分が役職の間に実現できなかったアイデアです。<br>
       LINEだけだと情報がごちゃごちゃしちゃうからこういうまとめサイトがあればよかったと思って今更ですが作ってみました。<br>
@@ -39,8 +40,6 @@
       <td><a >Googleフォームのリンクなど</a></td>
     </tr>
   </table>
-
-  <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
 
   </body>
 
