--- a/columns/column20200430.html
+++ b/columns/column20200430.html
@@ -11,7 +11,7 @@
     <div id="header">
       <script>
         $(function(){
-    $("#header").load("../header.html");
+    $("#header").load("./columns_header.html");
     });
       </script>
     </div>
@@ -36,8 +36,6 @@
     <ul>
         <li><a href="https://newspicks.com/">NewsPicks.com</a></li>
     </ul>
-
-    <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
   </body>
 
 </html>
