--- a/columns/discussion_list.html
+++ b/columns/discussion_list.html
@@ -11,7 +11,7 @@
     <div id="header">
       <script>
         $(function(){
-    $("#header").load("../header.html");
+    $("#header").load("./columns_header.html");
     });
       </script>
     </div>
