--- a/columns/about_site.html
+++ b/columns/about_site.html
@@ -11,7 +11,7 @@
     <div id="header">
       <script>
         $(function(){
-    $("#header").load("../header.html");
+    $("#header").load("./columns_header.html");
     });
       </script>
     </div>
@@ -35,7 +35,6 @@
         <li><a href="https://ferret-plus.com/9755">Dropboxでホームページのホスティングをする方法</a></li>
         <li><a href="https://techacademy.jp/magazine/6445">無料で使える！GitHub Pagesを使ってWebページを公開する方法</a></li>
     </ul>
-    <a href="https://yanagisawayuki22.github.io/">Back to top page</a>
 
   </body>
 
